kubernetes-service/kubernetes/airtable-sync-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airtable-sync-controller
  namespace: default
  labels:
    app: airtable-sync-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airtable-sync-controller
  template:
    metadata:
      labels:
        app: airtable-sync-controller
    spec:
      serviceAccountName: airtable-sync-controller
      containers:
        - name: controller
          image: adicraciun/airtable-sync-controller:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      terminationGracePeriodSeconds: 30
